--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
             /* background-color: grey; */
         }
         a { color: inherit; }
-        ul li { list-style: none;text-transform: capitalize; }
+        ul li { list-style: none; }
         span.feature { font-size: 18px; font-weight: bold; cursor: pointer; text-decoration: underline; color: #0d3349; }
         span.scenario { font-size: 16px; font-weight: bold; color: darkgreen; text-decoration: underline; }
         .pending { font-weight: bold; color: orange; }
