--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,10 @@
             /* background-color: grey; */
         }
         a { color: inherit; }
+        ul { border: 1px solid black; }
         ul li { list-style: none; }
+        ul li ul { margin-top: 4px; border: 1px dashed; border-width: 1px 0px 0px 1px; }
+        ul li ul li ul { border: none; }
         span.feature { font-size: 18px; font-weight: bold; cursor: pointer; text-decoration: underline; color: #0d3349; }
         span.scenario { font-size: 16px; font-weight: bold; color: darkgreen; text-decoration: underline; }
         .pending { font-weight: bold; color: orange; }
